# zed-rosbag-visualizer

./: .gitattributes  .gitignore  Untitled.ipynb  check_checkpoint.py  config.yaml  main.py  pyproject.toml
scripts/: export_fs_script.py  extract_images.py  preprocess.py  rerun_viewer.py  run_data4_experiments.sh  run_data5_experiments.ps1  seperate_frame.py  viewer.py
scripts_edit/: preprocess_edit.py  run_preprocess.sh  run_preprocess_parallel.sh  viewer_edit.py
src/: __init__.py  disparity.py  intrinsic_parameter.py  mask.py  odometry.py  player.py  point_cloud.py  pointcloud_setting.py  rerun_blueprint.py
src/foundation_stereo/: extractor.py  foundation_stereo.py  update.py
src/model/: BiRefNet_segmenter.py
src/preprocess/: __init__.py  preprocess_pipeline.py
src/preprocess/calibration/: __init__.py  intrinsic_parameter.py  odometry.py
src/preprocess/depth/: __init__.py  disparity_estimator.py
src/preprocess/depth/foundation_stereo/: extractor.py  foundation_stereo.py  submodule.py  update.py
src/preprocess/pipeline/: __init__.py  preprocess_pipeline.py  stereo_processor.py
src/preprocess/sensor_module/: __init__.py  intrinsic_parameter.py  odometry.py  stereo_estimator.py  stereo_frame_processor.py
src/preprocess/sensor_module/foundation_stereo/: Utils.py  __init__.py  foundation_stereo.py  geometry.py
src/preprocess/utils/: __init__.py  depthmap_color.py  logger.py  video_converter.py
src/viewer/: __init__.py  player.py  point_cloud.py  rerun_blueprint.py  rerun_blueprint_edit.py  viewer_pipeline.py
src/viewer/pipeline/: __init__.py  viewer_pipeline.py
tools/: export_fs_script.py  images_to_video.py  list_topics.py
weight/: foundation_stereo_scripted.pt
