[project]
name = "zed-rosbag-visualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "pyyaml>=6.0.2",
    "transformers>=4.44.2",
    "pillow>=10.5.0",
    "numpy>=1.26.0",
    "opencv-python>=4.10.0.84",
    "rosbags>=0.9.14",
    "rerun-sdk[all]>=0.17.0",
    "pyarrow>=17.0.0",
    "attrs>=23.2.0",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "einops>=0.8.1",
    "kornia>=0.8.1",
    "timm>=1.0.19",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
