[project]
name = "zed-rosbag-visualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Utilities
    "numpy>=1.26.0",
    "pyyaml>=6.0.2",
    
    # ROS Bag Handling
    "rosbags>=0.9.14",
    
    # Visualization
    "matplotlib>=3.10.6",
    "rerun-sdk[all]>=0.17.0",
    
    # Image Processing
    "opencv-python>=4.10.0.84",
    "pillow>=10.5.0",
    "scikit-image",
    
    # Machine Learning (FoundationStereo & Segmentation)
    "einops>=0.8.1",
    "kornia>=0.8.1",
    "timm>=1.0.19",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "transformers>=4.44.2",
    
    # Notebook & Development
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.7",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
